# rewards_calculator

./: CMakeLists.txt  README.md  Readme  main.cpp  transactions.csv
db_config/: db commands  rewards_db_config
db_setup/: db commands
rewards/: CMakeLists.txt  RewardRule.cpp  RewardRule.h  RewardRuleResolver.cpp  RewardRuleResolver.h  RewardsCalculator.cpp  RewardsCalculator.h  RewardsDbConnector.cpp  RewardsDbConnector.h  reward_rules.csv
rewards/test/: CMakeLists.txt  RewardRuleResolverTest.cpp
transactions/: CMakeLists.txt  TransactionsCSVReader.cpp  TransactionsCSVReader.h  transaction.cpp  transaction.h
transactions/test/: CMakeLists.txt  TransactionsCSVReaderTest.cpp
utils/: CMakeLists.txt  CSVReader.cpp  CSVReader.h
utils/test/: CMakeLists.txt  CSVReaderTest.cpp  transactions_test_data.csv
